Fix issue with nav
the nav links were unclickable

image was overflowing from its container covering the nav links

set oveflow to hidden to contain image

--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -24,6 +24,7 @@
     height: 500px;
     width: 400px;
     position: relative;
+    overflow: hidden;
 }
 
 .image-container img {
